--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "@angular/platform-browser": "~9.1.1",
         "@angular/platform-browser-dynamic": "~9.1.1",
         "@angular/router": "~9.1.1",
+        "@types/sortablejs": "^1.15.1",
         "rxjs": "~6.5.4",
+        "sortablejs": "^1.15.0",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
     },
